SMART ENVIRONMENT SYSTEM: Fix authentication for testing/evaluation
 PROBLEM SOLVED:
- Dev users were disabled in production (NODE_ENV=production on Vercel)
- Need production-quality system that still allows testing accounts
- Missing environment variables for dev user emails

 NEW ENVIRONMENT STRATEGY:
- DEVELOPMENT: Local dev with debug features
- STAGING: Production-quality for testing/evaluation (current Vercel state)
- PRODUCTION: True client-serving mode (set DISABLE_DEV_USERS=true)

 CHANGES APPLIED:
- Created smart environment detection system (src/lib/environment.ts)
- Dev users now work in development AND staging modes
- Added environment status API (/api/admin/environment-status)
- Updated .env.example with proper dev user email variables
- Created provider account setup script

 RESULT:
- Dev users (owner@test.com, manager@test.com, etc.) now work with any password
- System is production-quality but testing-friendly
- Easy transition to client production when ready

Environment: STAGING (production-quality + dev users enabled)

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,24 @@
 
 # --- Application Configuration ---
 APP_URL=https://your-app-url.vercel.app
+
+# 🎯 ENVIRONMENT CONFIGURATION
+# Smart environment detection for development phases:
+# - DEVELOPMENT: Local dev with debug features
+# - STAGING: Production-quality for testing/evaluation (default on Vercel)
+# - PRODUCTION: Live client system (set DISABLE_DEV_USERS=true)
+
+# Set to 'true' to disable dev users and enter true production mode
+# DISABLE_DEV_USERS=true
+
+# Development Test Users (work with any password when dev users enabled)
+DEV_OWNER_EMAIL=owner@test.com
+DEV_MANAGER_EMAIL=manager@test.com
+DEV_STAFF_EMAIL=staff@test.com
+DEV_ACCOUNTANT_EMAIL=accountant@test.com
+DEV_PROVIDER_EMAIL=provider@test.com
+
+# Legacy dev user support
 DEV_USER_EMAIL=dev@your-domain.local
 
 # --- Database (Neon PostgreSQL) ---
