COMPREHENSIVE ENVIRONMENT GUIDE: Complete .env.example reorganization

--- a/.env.example
+++ b/.env.example
@@ -1,72 +1,130 @@
 # ===================================================================
-# WorkStream Environment Variables Template
+# 🚀 STREAMFLOW ENVIRONMENT VARIABLES
 # ===================================================================
-# 
-# CROSS-PLATFORM USAGE:
-# 🟦 Replit:     Use Replit Secrets (this file ignored)
-# 💻 Local/VS Code: Copy this to .env and fill in your values
-# 🚀 Vercel:     Set these in Vercel Dashboard Environment Variables
+#
+# This file shows you ALL the settings StreamFlow needs to work properly.
+# Think of these as "configuration switches" that tell your app how to behave.
+#
+# 📋 HOW TO USE:
+# 🟦 Replit:     Use Replit Secrets (this file is just for reference)
+# 💻 Local:      Copy this to .env and fill in your real values
+# 🚀 Vercel:     Add these in Vercel Dashboard → Settings → Environment Variables
 #
 # ===================================================================
 
-# --- Application Configuration ---
-APP_URL=https://your-app-url.vercel.app
+# ===================================================================
+# 🏢 PROVIDER-SIDE VARIABLES
+# These are YOUR settings as the StreamFlow platform provider
+# ===================================================================
 
-# 🎯 ENVIRONMENT CONFIGURATION
-# Smart environment detection for development phases:
-# - DEVELOPMENT: Local dev with debug features
-# - STAGING: Production-quality for testing/evaluation (default on Vercel)
-# - PRODUCTION: Live client system (set DISABLE_DEV_USERS=true)
+# --- Your Platform Configuration ---
+APP_URL=https://your-streamflow-app.vercel.app
+# ☝️ This is the web address where your StreamFlow platform lives
 
-# Set to 'true' to disable dev users and enter true production mode
-# DISABLE_DEV_USERS=true
+# 🎯 ENVIRONMENT MODE
+# Controls whether you're testing or serving real clients
+DISABLE_DEV_USERS=false
+# ☝️ Set to 'true' when you're ready to serve real clients (disables test accounts)
 
-# Development Test Users (work with any password when dev users enabled)
-DEV_OWNER_EMAIL=owner@test.com
-DEV_MANAGER_EMAIL=manager@test.com
-DEV_STAFF_EMAIL=staff@test.com
-DEV_ACCOUNTANT_EMAIL=accountant@test.com
-DEV_PROVIDER_EMAIL=provider@test.com
-
-# Legacy dev user support
-DEV_USER_EMAIL=dev@your-domain.local
-
-# --- Database (Neon PostgreSQL) ---
-# Format: postgresql://username:password@host-pooler.region.aws.neon.tech/dbname?sslmode=require
+# --- Your Database (Neon PostgreSQL) ---
 DATABASE_URL=postgresql://neondb_owner:your_password@ep-your-host-pooler.region.aws.neon.tech/neondb?sslmode=require
+# ☝️ This connects to your Neon database - get this from neon.com dashboard
 
-# --- Security Tokens ---
+# --- Your Security Keys ---
 ADMIN_BOOTSTRAP_TOKEN=your-admin-bootstrap-token-uuid
-SESSION_SECRET=your-session-secret-key
+# ☝️ A secret key that lets you access admin features (make this random and long)
 
-# --- Stripe Payment Processing ---
-# Get from: https://dashboard.stripe.com/test/apikeys
+SESSION_SECRET=your-session-secret-key
+# ☝️ Keeps user logins secure (make this random and long)
+
+# --- Your AI Assistant (OpenAI) ---
+OPENAI_API_KEY=sk-your-openai-api-key
+# ☝️ Get this from openai.com - powers lead analysis and business intelligence
+# 💰 Cost: ~$15-25/month for active cleaning business
+
+# ===================================================================
+# 🤝 HAND-OFF VARIABLES
+# These use YOUR accounts during development, but clients will replace them
+# ===================================================================
+
+# --- Payment Processing (Stripe) ---
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
-
-# --- AI Integration ---
-OPENAI_API_KEY=sk-your-openai-api-key
+# ☝️ Get from stripe.com dashboard - handles payments and invoicing
+# 🔄 HAND-OFF: Each client will use their own Stripe account
 
 # --- Email Service (SendGrid) ---
 SENDGRID_API_KEY=SG.your-sendgrid-api-key
+EMAIL_FROM=noreply@your-domain.com
+# ☝️ Sends automated emails (notifications, invoices, etc.)
+# 🔄 HAND-OFF: Clients can use their own email service
 
 # --- SMS Service (Twilio) ---
 TWILIO_ACCOUNT_SID=your-twilio-account-sid
 TWILIO_AUTH_TOKEN=your-twilio-auth-token
 TWILIO_PHONE_NUMBER=+1234567890
+# ☝️ Sends text message alerts for hot leads
+# 🔄 HAND-OFF: Clients can use their own phone numbers
 
-# --- Billing Automation ---
-MV_CRON_TOKEN=your-cron-security-token
+# ===================================================================
+# 👥 CLIENT-SIDE VARIABLES
+# These will be different for each client organization
+# ===================================================================
 
-# --- Optional: Public API Configuration ---
-PUBLIC_ALLOWED_ORIGINS=https://your-domain.com,https://your-app.vercel.app
-
-# --- Optional: Development Seeds ---
-SEED_PROVIDER_EMAIL=provider@example.com
-SEED_OWNER_EMAIL=owner@example.com
-SEED_STAFF_EMAIL=staff@example.com
-SEED_ORG_NAME=Your Company Name
+# --- Client Organization Setup ---
+SEED_ORG_NAME=Your Client Company Name
+SEED_OWNER_EMAIL=owner@client-company.com
 SEED_OWNER_PASSWORD=secure_password_123
+# ☝️ Creates the main client account when setting up a new organization
+
+# --- Client Staff Accounts ---
+SEED_STAFF_EMAIL=staff@client-company.com
 SEED_STAFF_PASSWORD=secure_password_456
+# ☝️ Creates staff accounts for the client's team
+
+# --- Business Rules ---
+HOT_SCORE_THRESHOLD=70
+# ☝️ Leads scoring 70+ trigger immediate alerts (adjust per client)
+
+# ===================================================================
+# 🧪 DEVELOPMENT & TESTING
+# These help you test the system safely
+# ===================================================================
+
+# --- Test User Accounts (work with any password) ---
+DEV_OWNER_EMAIL=owner@test.com
+DEV_MANAGER_EMAIL=manager@test.com
+DEV_STAFF_EMAIL=staff@test.com
+DEV_ACCOUNTANT_EMAIL=accountant@test.com
+DEV_PROVIDER_EMAIL=provider@test.com
+# ☝️ Use these to test different user roles without creating real accounts
+
+# --- Legacy Support ---
+DEV_USER_EMAIL=dev@your-domain.local
+DEV_ORG_ID=dev-test-org-id
+# ☝️ Older test account system (kept for compatibility)
+
+# --- Development Seeds ---
 SEED_DEV_USER_PASSWORD=dev123
+# ☝️ Password for development test accounts
+
+# ===================================================================
+# 🔧 ADVANCED FEATURES (Optional)
+# These enable special functionality
+# ===================================================================
+
+# --- API Security ---
+PUBLIC_ALLOWED_ORIGINS=https://your-domain.com,https://your-app.vercel.app
+# ☝️ Controls which websites can access your API
+
+# --- Automation Security ---
+MV_CRON_TOKEN=your-cron-security-token
+# ☝️ Protects automated billing and maintenance tasks
+
+# --- Provider Federation (Future Feature) ---
+PROVIDER_FEDERATION_ENABLED=false
+PROVIDER_KEYS_JSON={}
+PROVIDER_CLOCK_SKEW_SEC=300
+PROVIDER_FEDERATION_SIG_SHA256=false
+# ☝️ Allows multiple StreamFlow instances to work together (advanced)
