PROVIDER FEDERATION BILLING SYSTEM: Complete implementation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+
 # ===================================================================
 # 🚀 STREAMFLOW ENVIRONMENT VARIABLES
 # ===================================================================
@@ -43,16 +44,34 @@ OPENAI_API_KEY=sk-your-openai-api-key
 # 💰 Cost: ~$15-25/month for active cleaning business
 
 # ===================================================================
-# 🤝 HAND-OFF VARIABLES
-# These use YOUR accounts during development, but clients will replace them
+# 🏢 PROVIDER REVENUE COLLECTION
+# These are YOUR Stripe settings for collecting revenue from clients
 # ===================================================================
 
-# --- Payment Processing (Stripe) ---
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
-# ☝️ Get from stripe.com dashboard - handles payments and invoicing
-# 🔄 HAND-OFF: Each client will use their own Stripe account
+# --- Provider Stripe Account (YOUR revenue) ---
+PROVIDER_STRIPE_SECRET_KEY=sk_test_your_provider_stripe_secret_key
+PROVIDER_STRIPE_PUBLISHABLE_KEY=pk_test_your_provider_stripe_publishable_key
+PROVIDER_STRIPE_WEBHOOK_SECRET=whsec_your_provider_webhook_secret
+# ☝️ YOUR Stripe account - clients pay YOU for StreamFlow subscriptions
+# 💰 Revenue: BASE (free), PRO ($97/month), ELITE ($297/month) + per-lead billing
+
+# --- Provider Stripe Price IDs ---
+PROVIDER_STRIPE_BASE_PRICE_ID=price_your_base_plan_id
+PROVIDER_STRIPE_PRO_PRICE_ID=price_your_pro_plan_id
+PROVIDER_STRIPE_ELITE_PRICE_ID=price_your_elite_plan_id
+# ☝️ Create these in YOUR Stripe dashboard for subscription billing
+
+# ===================================================================
+# 👥 CLIENT REVENUE COLLECTION
+# Each client uses their own Stripe account for their customer billing
+# ===================================================================
+
+# --- Client Stripe Account (client revenue) ---
+STRIPE_SECRET_KEY=sk_test_client_stripe_secret_key
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_client_stripe_publishable_key
+STRIPE_WEBHOOK_SECRET=whsec_client_webhook_secret
+# ☝️ Client's Stripe account - clients bill THEIR customers
+# 🔄 HAND-OFF: Each client organization uses their own Stripe account
 
 # --- Email Service (SendGrid) ---
 SENDGRID_API_KEY=SG.your-sendgrid-api-key
