COMPLETE BILLING ENGINE: Finish all TODO implementations and update docs

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@
 # ===================================================================
 
 # --- Your Platform Configuration ---
-APP_URL=https://your-streamflow-app.vercel.app
+APP_URL=https://stream-flow-xi.vercel.app/
 # ☝️ This is the web address where your StreamFlow platform lives
 
 # 🎯 ENVIRONMENT MODE
