CRITICAL: Fix Provider/Developer System Architecture
ARCHITECTURAL VIOLATIONS RESOLVED:
 Removed PROVIDER role from client-side RBAC enum
 Implemented environment-based authentication for Provider/Developer systems
 Fixed all TypeScript compilation errors
 Updated provider/developer authentication to use environment variables
 Migrated existing PROVIDER users to OWNER role
 Clean database schema with proper client-only roles

SYSTEM SEPARATION ACHIEVED:
- Client System: OWNER, MANAGER, STAFF, ACCOUNTANT, EMPLOYEE roles only
- Provider System: Environment-based auth (PROVIDER_EMAIL/PROVIDER_PASSWORD)
- Developer System: Environment-based auth (DEVELOPER_EMAIL/DEVELOPER_PASSWORD)

BUILD STATUS:  SUCCESSFUL (Zero TypeScript errors, clean compilation)

Next: Implement separate portal layouts and complete system isolation

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,18 @@
 APP_URL=https://stream-flow-xi.vercel.app/
 # ☝️ This is the web address where your StreamFlow platform lives
 
+# --- Provider System Authentication ---
+PROVIDER_EMAIL=chris.tcr.2012@gmail.com
+PROVIDER_PASSWORD=Thrillicous01no
+NEXT_PUBLIC_PROVIDER_EMAIL=chris.tcr.2012@gmail.com
+# ☝️ Provider system access credentials (environment-based, not database)
+
+# --- Developer System Authentication ---
+DEVELOPER_EMAIL=gametcr3@gmail.com
+DEVELOPER_PASSWORD=Thrillicous01no
+NEXT_PUBLIC_DEVELOPER_EMAIL=gametcr3@gmail.com
+# ☝️ Developer system access credentials (environment-based, not database)
+
 # 🎯 ENVIRONMENT MODE
 # Controls whether you're testing or serving real clients
 DISABLE_DEV_USERS=false
