💰 ACCOUNTANT SYSTEM: Complete Separation & Clean Architecture
🎯 FOUR-SYSTEM ARCHITECTURE IMPLEMENTED:
✅ PROVIDER SYSTEM - Environment-based authentication (chris.tcr.2012@gmail.com)
✅ DEVELOPER SYSTEM - Environment-based authentication (gametcr3@gmail.com)
✅ CLIENT SYSTEM - Database-driven RBAC (owner, manager, staff, employee only)
✅ ACCOUNTANT SYSTEM - NEW separate environment-based authentication (accountant@streamflow.com)

🔒 ACCOUNTANT SYSTEM FEATURES:
✅ Complete authentication isolation with ws_accountant cookie
✅ Dedicated /accountant/* route protection in middleware
✅ Professional accounting dashboard with financial metrics
✅ Comprehensive permission system for financial operations
✅ Integration-ready for QuickBooks, Xero, banking connections
✅ Audit logging and compliance framework (GAAP/IFRS)
✅ Session management with enhanced financial security
✅ Third-party professional access (CPAs, bookkeepers, tax specialists)

🧹 SYSTEM CLEANUP COMPLETED:
✅ Removed accountant from client-side dev user systems
✅ Removed provider/developer from client-side dev user systems
✅ Clean separation: no cross-contamination between systems
✅ Updated all authentication flows and middleware
✅ Updated logout to clear all four system cookies
✅ Updated documentation to reflect four-system architecture

🔐 AUTHENTICATION MATRIX:
├── PROVIDER: Environment auth → /provider/* routes only
├── DEVELOPER: Environment auth → /dev/* routes only
├── ACCOUNTANT: Environment auth → /accountant/* routes only
└── CLIENT: Database RBAC → business operation routes only

💼 ACCOUNTANT CAPABILITIES:
✅ Core Accounting: Ledger, AP/AR, invoicing, expense tracking
✅ Financial Reporting: P&L, balance sheet, cash flow, tax reports
✅ Tax Management: Filings, payments, 1099s, audit preparation
✅ Banking: Reconciliation, transaction import, statement management
✅ Integrations: QuickBooks, Xero, NetSuite, Sage, banking APIs
✅ Compliance: GAAP/IFRS alignment, SOX support, audit trails
✅ Financial Controls: Month/y

--- a/.env
+++ b/.env
@@ -18,6 +18,11 @@ DEVELOPER_EMAIL=gametcr3@gmail.com
 DEVELOPER_PASSWORD=Thrillicious01no
 NEXT_PUBLIC_DEVELOPER_EMAIL=gametcr3@gmail.com
 
+# --- Accountant System Access ---
+ACCOUNTANT_EMAIL=accountant@streamflow.com
+ACCOUNTANT_PASSWORD=Thrillicious01no
+NEXT_PUBLIC_ACCOUNTANT_EMAIL=accountant@streamflow.com
+
 # ===================================================================
 # 🗄️ DATABASE & CORE INFRASTRUCTURE
 # ===================================================================
@@ -57,7 +62,6 @@ DISABLE_DEV_USERS=false
 DEV_OWNER_EMAIL=owner@test.com
 DEV_MANAGER_EMAIL=manager@test.com
 DEV_STAFF_EMAIL=staff@test.com
-DEV_ACCOUNTANT_EMAIL=accountant@test.com
 
 # --- Legacy Development ---
 DEV_USER_EMAIL=dev@mountain-vista.local
