📱 2FA SETUP INSTRUCTIONS ADDED

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,15 @@ PROVIDER_ADMIN_TOTP_SECRET=your-base32-totp-secret-here
 # 🔐 Generate hash: npx bcrypt-cli "your-password" 12
 # 🔐 Generate TOTP: Use Google Authenticator or similar app
 
+# --- 2FA Setup Instructions (Optional but Recommended) ---
+# To enable 2FA for enhanced security:
+# 1. Download Google Authenticator, Authy, or similar TOTP app
+# 2. Add account manually with your TOTP secret above
+# 3. Account name: StreamFlow Provider (your-email@domain.com)
+# 4. Use 6-digit codes during login for enhanced security
+# 5. Keep backup codes in a secure location
+# Note: 2FA is optional during development/testing but recommended for production
+
 # --- Master Encryption Key for Provider Settings ---
 MASTER_ENC_KEY=your-base64-encoded-256-bit-encryption-key
 # ☝️ 256-bit AES key for encrypting sensitive provider data in database
