🔧 AUTHENTICATION SYSTEM FIXES: Dependencies & Database Ready
✅ CRITICAL FIXES COMPLETED:
- Installed missing dependencies: bcrypt, speakeasy, @types/bcrypt, @types/speakeasy
- Created ProviderSettings and ProviderAuditLog database tables via Prisma
- Updated password hash to working version:
- Verified environment variables are loading correctly

🧪 TESTING STATUS:
- Password hash verification: ✅ WORKING
- Environment variables: ✅ ALL SET
- Database tables: ✅ CREATED
- Dependencies: ✅ INSTALLED

🔍 CURRENT ISSUE:
Dual-layer authentication system is being called but both DB and recovery modes are failing.
Need to debug authentication logic flow.

⚠️ VERCEL UPDATE REQUIRED:
Update PROVIDER_ADMIN_PASSWORD_HASH in Vercel environment variables to:

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@
 # --- Provider Break-Glass Emergency Admin ---
 # These credentials work even when the database is unavailable
 PROVIDER_ADMIN_EMAIL=chris.tcr.2012@gmail.com
-PROVIDER_ADMIN_PASSWORD_HASH=$2a$12$Ikb.sHYQgWx.AAXCpt.NNyOiaSdTRq0WIII71jrMg421EnAGaUM1/M.
+PROVIDER_ADMIN_PASSWORD_HASH=$2b$12$iiAao3u5Zf1IBvPL7Vp0rO3ECztX7ZBPCgndmJ9VnRwp505CsMWKS
 PROVIDER_ADMIN_TOTP_SECRET=JBSWY3DPEHPK3PXP
 
 # --- 2FA Setup Instructions (Optional) ---
