--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@sendgrid/mail": "8.1.0",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/pdf-parse": "^1.1.5",
+    "@types/speakeasy": "^2.0.10",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
@@ -41,6 +44,7 @@
     "pdf-parse": "^1.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "speakeasy": "^2.0.0",
     "stripe": "^14.25.0",
     "swr": "^2.2.5",
     "twilio": "4.22.0",
