--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@types/speakeasy": "^2.0.10",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "dexie": "^4.2.0",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "next": "^15.1.0",
+    "next-pwa": "^5.6.0",
     "openai": "^5.23.0",
     "otplib": "^12.0.1",
     "pdf-parse": "^1.1.1",
@@ -48,6 +50,7 @@
     "stripe": "^14.25.0",
     "swr": "^2.2.5",
     "twilio": "4.22.0",
+    "workbox-webpack-plugin": "^7.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
