--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcryptjs": "^3.0.2",
     "dexie": "^4.2.0",
     "mammoth": "^1.11.0",
+    "micro": "^10.0.1",
     "multer": "^2.0.2",
     "next": "^15.1.0",
     "next-pwa": "^5.6.0",
