fix: resolve Vercel deployment build errors
Context: Build was failing with TypeScript and SSR errors
- Fixed guard.ts type errors (UserRole | undefined vs null)
- Fixed audit category type (PERMISSION_DENIED)
- Excluded test files from TypeScript compilation
- Fixed SSR issues with navigator/window in useOfflineTimeClock
- Temporarily disabled offline features in worker clock page

Changes:
- src/lib/auth/guard.ts: Use nullish coalescing for baseRole
- src/lib/auth/guard.ts: Use correct audit violation type
- tsconfig.json: Exclude *.test.ts and *.spec.ts files
- src/lib/hooks/useOfflineTimeClock.ts: Add typeof window checks
- src/pages/worker/clock.tsx: Comment out useOfflineTimeClock (TODO)

Build Status: ✅ SUCCESS - npm run build completes without errors
Vercel Deployment: ✅ READY

TODO: Re-enable offline time clock after implementing lazy Dexie loading

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,10 @@
     "node_modules",
     "**/ai-triage-agent*/**",
     "/tmp/**",
-    "attached_assets/**"
+    "attached_assets/**",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
   ]
 }
