--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "setpwd": "tsx scripts/set-password.ts",
+    "gen-key": "tsx scripts/gen-key.ts",
     "dev": "next dev -p 5000",
     "build": "prisma migrate deploy && next build",
     "start": "next start",
