WIP: chore(app-router): extract components from app router pages (step 2/7)
- Copied app router page bodies to src/components/**
- Created Leads, Opportunities, Contacts, Organizations components
- Created LeadDetail, ContactDetail, OpportunityDetail, OrganizationDetail components
- Deleted conflicting pages router files (leads.tsx, leads/[id].tsx)
- Deleted _app.tsx and _document.tsx (no longer needed for app router)
- Added root layout.tsx for app router
- Fixed useParams null checks in all detail pages
- Added Suspense wrapper for useSearchParams in contacts page

Next steps:
- Rename component exports
- Replace route files with thin wrappers
- Fix imports across codebase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     /* -------- Original settings (preserved) -------- */
     "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "allowJs": true,
@@ -16,17 +20,26 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
-    "paths": { "@/*": ["src/*"] },
-    "types": ["node"],
-
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "types": [
+      "node"
+    ],
     /* -------- Safe, non-breaking additions -------- */
-    "useUnknownInCatchVariables": false,   /* friendlier existing catch handlers */
-    "exactOptionalPropertyTypes": false,   /* avoids churn in JSON/Prisma shapes */
-    "noUncheckedIndexedAccess": false,     /* don’t explode indexed lookups with undefined */
-    "noFallthroughCasesInSwitch": true,    /* tiny safety net; zero runtime change */
-    "sourceMap": true                      /* better debugging; Next ignores on prod build */
+    "useUnknownInCatchVariables": false, /* friendlier existing catch handlers */
+    "exactOptionalPropertyTypes": false, /* avoids churn in JSON/Prisma shapes */
+    "noUncheckedIndexedAccess": false, /* don’t explode indexed lookups with undefined */
+    "noFallthroughCasesInSwitch": true, /* tiny safety net; zero runtime change */
+    "sourceMap": true /* better debugging; Next ignores on prod build */,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-
   /* Keep includes broad so Next + scripts are covered */
   "include": [
     "next-env.d.ts",
@@ -34,7 +47,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-
   /* Keep excludes minimal */
   "exclude": [
     "node_modules",
