--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "seed": "tsx prisma/seed.ts",
     "lint": "next lint",
     "typecheck": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc --noEmit --skipLibCheck",
-    "typecheck:api": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc -p tsconfig.api.json --noEmit --skipLibCheck",
-    "typecheck:ui": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc -p tsconfig.ui.json --noEmit --skipLibCheck"
+    "typecheck:api": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc -p tsconfig.api.json --noEmit",
+    "typecheck:ui": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc -p tsconfig.ui.json --noEmit",
+    "verify:binders": "node scripts/verify-real-code.js",
+    "guard:binders": "powershell -ExecutionPolicy Bypass -File scripts/augment-verify-and-guard.ps1"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -70,6 +72,7 @@
     "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
     "eslint-config-next": "^15.5.4",
+    "glob": "^11.0.3",
     "postcss": "8.4.47",
     "prisma": "^6.16.2",
     "tailwindcss": "3.4.10",
