feat: add self-healing binder guard with CI enforcement
- Fixed PowerShell quick-stat.ps1 (-Filter → -Include for arrays)
- Added retry-failed-binders.js with exponential backoff (20s, 60s)
- Added guard-binders.js orchestrating validation, retry, verification
- Updated package.json with granular binder scripts
- Added GitHub Actions workflow for PR quality gates
- Enhanced ops/reports/README.md with self-heal documentation
- Ensures Binder14 config hub artifacts on every run
- Exit codes: 0=pass, 2=quality fail, 3=reports missing
- Thresholds: ≥95% success, 100% mapping, Binder14 artifacts present

--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "typecheck": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc --noEmit --skipLibCheck",
     "typecheck:api": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc -p tsconfig.api.json --noEmit",
     "typecheck:ui": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc -p tsconfig.ui.json --noEmit",
-    "verify:binders": "node scripts/verify-real-code.js",
-    "guard:binders": "powershell -ExecutionPolicy Bypass -File scripts/augment-verify-and-guard.ps1"
+    "guard:binders": "cross-env NODE_OPTIONS=--max-old-space-size=8192 node scripts/guard-binders.js",
+    "binders:pre": "node scripts/validate-binders-new.js --phase pre",
+    "binders:run": "node scripts/binder-orchestrator-new.js",
+    "binders:post": "node scripts/validate-binders-new.js --phase post",
+    "binders:retry": "node scripts/retry-failed-binders.js",
+    "binders:verify": "node scripts/verify-real-code.js",
+    "binders:quickstat": "powershell -ExecutionPolicy Bypass -File scripts/quick-stat.ps1"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
