feat: add hybrid binder executor with sequential processing and auto-fallback
- Created hybrid-binder-executor.js for autonomous sequential execution
- Added report-failures.js for detailed failure analysis
- Added hybrid-binders.yml GitHub Actions workflow
- Updated package.json with hybrid:binders script
- Processes all binders with pre/post validation
- Auto-fallback to orchestrator on primary generator failure
- Memory-optimized for 16GB RAM / RTX 3070 / i7 system
- Generates comprehensive reports with actionable fixes
- Exit codes: 0=success, 1=low success rate, 2=guard failed

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typecheck:api": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc -p tsconfig.api.json --noEmit",
     "typecheck:ui": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc -p tsconfig.ui.json --noEmit",
     "guard:binders": "cross-env NODE_OPTIONS=--max-old-space-size=8192 node scripts/guard-binders.js",
+    "hybrid:binders": "cross-env NODE_OPTIONS=--max-old-space-size=8192 node scripts/hybrid-binder-executor.js",
     "binders:pre": "node scripts/validate-binders-new.js --phase pre",
     "binders:run": "node scripts/binder-orchestrator-new.js",
     "binders:post": "node scripts/validate-binders-new.js --phase post",
