fix: optimize Vercel deployment configuration
- Added .vercelignore to exclude unnecessary files (docs, tests, scripts, reports)
- Optimized next.config.mjs for large codebase (32k+ API files)
  - Disabled worker threads to prevent OOM
  - Optimized webpack chunk splitting
  - Added security headers
  - Configured memory limits
- Updated vercel.json with proper build commands and function config
  - Set 1GB memory per API function
  - Added proper caching headers
  - Configured health check rewrite
- Created .env.production.example with all required variables
- Added VERCEL_DEPLOYMENT_FIX.md with complete deployment guide

Fixes:
- Build memory issues with large number of files
- Deployment configuration for Vercel platform
- Environment variable documentation
- Security headers and caching strategies

Ready for production deployment!

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,35 @@
 {
+  "buildCommand": "prisma generate && prisma migrate deploy && next build",
+  "installCommand": "npm ci",
+  "framework": "nextjs",
+  "regions": ["iad1"],
+  "functions": {
+    "src/pages/api/**/*.ts": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
   "crons": [
     {
       "path": "/api/billing/invoices.create?range=d30",
       "schedule": "0 10 1 * *"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store, must-revalidate"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/health",
+      "destination": "/api/health"
     }
   ]
 }
